fixed centering issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -330,4 +330,12 @@ a:focus {
   ol {
     list-style-position: inside;
   }
+
+  .post-list-item {
+    flex-direction: column-reverse;
+  }
+  .imageContainer {
+    display: flex ;
+    justify-content: center;
+  }
 }
